update cors config